--- a/index.html
+++ b/index.html
@@ -3,53 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sign Up</title>
+<title>Contact Us</title>
 </head>
 <body>
 
-<h2>Sign Up</h2>
-<form id="signupForm">
-  <label for="username">Username:</label><br>
-  <input type="text" id="username" name="username" required><br>
+<h2>Contact Us</h2>
+<form action="send_email.php" method="post">
+  <label for="name">Name:</label><br>
+  <input type="text" id="name" name="name" required><br>
   
   <label for="email">Email:</label><br>
   <input type="email" id="email" name="email" required><br>
   
-  <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password" required><br><br>
+  <label for="message">Message:</label><br>
+  <textarea id="message" name="message" required></textarea><br><br>
   
-  <input type="submit" value="Sign Up">
+  <input type="submit" value="Submit">
 </form>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-<script>
-  const supabaseUrl = 'https://skyrbuelauzbedgignph.supabase.co'; // Replace with your Supabase project URL
-  const supabaseApiKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNreXJidWVsYXV6YmVkZ2lnbnBoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MDk2MTY1NjQsImV4cCI6MjAyNTE5MjU2NH0.gzYzpurOFRNpFYlFzWPU9W2C23f5pttBGgnY70jmykA'; // Replace with your Supabase public API key
-
-  const supabase = createClient(supabaseUrl, supabaseApiKey);
-
-  document.getElementById("signupForm").addEventListener("submit", async function(event) {
-    event.preventDefault();
-
-    // Get user input from the form
-    const email = document.getElementById("email").value;
-    const password = document.getElementById("password").value;
-
-    // Sign up the user with Supabase
-    let { user, error } = await supabase.auth.signUp({
-      email: email,
-      password: password
-    });
-
-    if (error) {
-      console.error('Error:', error.message);
-      // Handle error, e.g., display error message to the user
-    } else {
-      console.log('User signed up successfully:', user);
-      // Handle success, e.g., redirect to login page or display success message
-    }
-  });
-</script>
-
 </body>
-</html
+</html>
